# photogram

./: .env.example  .gitignore  README.md  docker-compose.yml  download_outputs.sh  extract_outputs.sh  relay.py  run_tests.py  setup_ubuntu_wsl.sh  spa_server.mjs  start_backend.py  start_worker_wsl.sh  test_nodeodm.sh  test_nodeodm2.sh  test_nodeodm3.sh  test_nodeodm4.sh  test_path.sh  test_pipeline.py  wsl_test.sh
backend/: Dockerfile  celery_app.py  config.py  database.py  main.py  requirements.txt
backend/models/: __init__.py
backend/routers/: jobs.py  projects.py  system.py
backend/services/: exif.py  gcp_detector.py  nodeodm.py  potree.py  report_parser.py
backend/tasks/: pipeline.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/public/: potree_viewer.html
frontend/src/: App.tsx  api.ts  index.css
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/src/: lib.rs
frontend/src/components/: ErrorBoundary.tsx  GCPEditor.tsx  GCPImagePicker.tsx  GCPPhotoOrganizer.tsx  GcpAutoDetect.tsx  ImageGallery.tsx  MiniMap.tsx
frontend/src/hooks/: useNotification.ts  useSettings.ts  useToast.tsx
frontend/src/pages/: BatchImport.tsx  Dashboard.tsx  FlightPlanner.tsx  NewProject.tsx  OrthoViewer.tsx  ProjectDetail.tsx  Queue.tsx  ReportExport.tsx  Settings.tsx  Viewer3D.tsx
