[package]
name = "frontend"
version = "0.4.0"
description = "PhotoForge — Local Photogrammetry Processing"
authors = ["PhotoForge"]
edition = "2021"

[lib]
name = "frontend_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri                    = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener      = "2"
tauri-plugin-notification = "2"
serde                    = { version = "1", features = ["derive"] }
serde_json               = "1"
open                     = "5"
reqwest                  = { version = "0.12", features = ["json"], default-features = false }
tokio                    = { version = "1", features = ["rt", "rt-multi-thread"] }
